--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 
-<body>
+<body style="background-color:rgb(204, 176, 230);">
 
 <h1 style="background-color:blue;">Viena maza turku</h1>
 <h2 style="color:green;">Pupa ceļoja uz</h2>
